#1125 Fix title cropping && align button

--- a/server/http-dashboard/app/components/MainLayout/components/Header/styles.less
+++ b/server/http-dashboard/app/components/MainLayout/components/Header/styles.less
@@ -7,13 +7,14 @@
 .main-layout--header-name {
   .font-h1;
   width: 100%;
-  line-height: @style-font-size-6;
 }
 
 .main-layout--header-options {
   width: 100%;
-  text-align: right;
   padding: (@style-size-1/2) 0;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
   button {
     min-width: 92px;
     margin: 0 @style-size-1;
